[package]
name = "cors-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.27.0", features = ["full"] }
serde_qs = "0.12.0"

[dev-dependencies]
hyper = { version = "0.14.24", features = ["client"] }
maplit = "1.0.2"
